<resources>
    <string name="app_name">CSIS</string>
    <string name="missonStatement">The mission of the Department of
        Computer Science and Information Systems at SVSU is to
        provide an outstanding education to its students, to
        advance scholarship in the key domains of the computing
        and information systems sciences, and to engage in activities
        that improve the welfare of society and enhance the reputation of
        SVSU.

    </string>
    <string name="Fall1CS">
        General Education \n
        MATH 103 \n
        General Requirements \n
        COMM 105A \n
        PHIL 205A (or 210B) \n
        Core Requirements \n
        CS 105 (or CS 107A) \n
        Electives \n
    </string>

    <string name="Winter1CS">
        General Education \n
        General Requirements \n
        MATH 161 \n
        Core Requirements \n
        CS 146 \n
        CS 116 \n
        Electives \n
    </string>

    <string name="Fall1CIS">
        General Education \n
        MATH 103 \n
        General Requirements \n
        COMM 105 \n
        PHIL 205A (or PHIL 210B) \n
        Core Requirements \n
        CS 105 (or CS 107) \n
        Electives \n
    </string>

    <string name="Winter1CIS">
        General Education \n
        General Requirements \n
        MATH 120B \n
        Core Requirements \n
        CS 146 \n
        CS 116 \n
        Electives \n
    </string>

    <string name="Professor1Bio">Il-Hyung Cho is an associate professor and chair of the
        Department of Computer Science at Saginaw Valley State University, Michigan, where he has
        been since 2003. During 2010-2011 he was a Visiting Professor of Bioinformatics lab at
        Washington State University.\n
    </string>

    <string name="Professor2Bio">George Corser is an Assistant Professor of Computer Science and
        Information Systems (CSIS) at Saginaw Valley State University (SVSU). His research
        defines and analyzes location privacy and security protocols in vehicle networks.
        His teaching explores web and mobile app development, theoretical computer science
        and cybercrime. \n
    </string>

    <string name="Professor3Bio">I graduated with PhD in Computational Analysis and Modeling (2013)
        from Louisiana Tech University, Ruston, USA. Prior that, I received MS and BSc in Computer
        Science and Engineering from University of Dhaka, Bangladesh. I received MS in Mathematics
        (2011) and MS in Computer Science (2013) from Louisiana Tech University. \n
    </string>

    <string name="CommonCourses">
        cs105 \t cs116 \t cs216 \t cis255
    </string>

    <string name="Differences">Computer Science tends to be more theoretic in nature than Computer
        Information Systems.  It uses more abstraction and mathematics as a core skill set area.
    </string>

</resources>
